testsuite/tests/cmm/should_compile/T24474.cmm
/* Test that -optc-g3 does not fail compilation of C-- files.  */
#define foo 123
