testsuite/tests/cmm/should_fail/T24474-cmm-override-g0.cmm
/* Test that -optCmmP-g3 /does/ fail compilation of C-- files.  */
